Add feat: update customer
